# ts2-disasm-ghidra

./: .gitignore  Dockerfile  README.md  disasm.py  pyproject.toml
.github/workflows/: lint.yaml
